# study_icu

./: .gitignore  README.md
Study_icu/: settings.gradle
Study_icu/app/: CMakeLists.txt  build.gradle
Study_icu/app/src/main/: AndroidManifest.xml
Study_icu/app/src/main/cpp/sample/: AbstractRenderer.h  FontStructures.h
Study_icu/app/src/main/java/com/heaven7/android/icu/app/: MainActivity.java
Study_icu/app/src/main/res/values/: strings.xml
Study_icu/gradle/wrapper/: gradle-wrapper.properties
icu4c_android/: .project  AndroidManifest.xml  README.md  build.xml
icu4c_android/jni/: Android.mk  Application.mk  common  icudt51.mk  icuuc51.mk  stubdata
